@@ -59,7 +59,7 @@ more of the dimensions can be overridden by a value in a -size entry.
 [Field = InterpolationOrder]
 short = order
 type = I
-usage = Order of interpolation to use (1 = linear, 2 = quadratic; default = 2)
+usage = "Order of interpolation to use (1 = linear, 2 = quadratic; default = 2)"
 tooltip = 
 manpage = Order of interpolation to use.  Currently only quadratic (2) and
 linear (1) interpolation are available; the default is quadratic.
